--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,6 +44,17 @@ html {
     animation: fadein 2s;
 }
 
+.blocky {
+    background-color: #fff;
+    color: #343a40;
+    font-weight: bolder;
+    padding-left: 5;
+    padding-right: 5;
+    width: max-content;
+    font-family: 'IBM Plex Sans', sans-serif;
+    font-size: xx-large;
+}
+
 #me-landing {
     color: #fff;
     font-family: 'IBM Plex Sans', sans-serif;
@@ -78,7 +89,7 @@ html {
 
 .landing-more a {
     height: max-content;
-    background-color: #fff;
+    background-color: rgba(255, 255, 255, 0.801);
     padding-left: 5;
     padding-right: 5;
     font-weight: normal;
@@ -106,6 +117,59 @@ html {
     .landing-more {
         display: none;
     }
+}
+
+#mobile-title {
+    display: none;
+}
+
+@media only screen and (max-width: 993px) {
+    #mobile-title {
+        display: block;
+        font-family: 'IBM Plex Sans', sans-serif;
+        font-size: xxx-large;
+        margin: auto;
+    }
+    #mobile-title .blocky {
+        margin: auto;
+        font-size: xxx-large;
+        -webkit-animation: fadein 0.5s;
+        /* Safari, Chrome and Opera > 12.1 */
+        -moz-animation: fadein 0.5s;
+        /* Firefox < 16 */
+        -ms-animation: fadein 0.5s;
+        /* Internet Explorer */
+        -o-animation: fadein 0.5s;
+        /* Opera < 12.1 */
+        animation: fadein 0.5s;
+    }
+}
+
+#whoami {
+    color: #fff;
+    font-weight: bold;
+    text-align: justify;
+    max-width: 680px;
+    margin: auto;
+}
+
+#languages h2 {
+    margin: auto;
+}
+
+#whoami h2 {
+    margin: auto;
+}
+
+#languages {
+    color: #fff;
+    font-weight: bold;
+    max-width: 680px;
+    /* float: right; */
+    margin: auto;
+    right: 0;
+    text-align: justify;
+    align-items: right;
 }
 
 .site-info {
@@ -250,9 +314,9 @@ a h5 {
 
 .home.container {
     padding: 20px;
-    font-family: 'Noto Sans TC', sans-serif;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    background-color: #fff;
+    /* font-family: 'Noto Sans TC', sans-serif; */
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+    /* background-color: #fff; */
     border-bottom-right-radius: 5px;
     border-bottom-left-radius: 5px;
 }
@@ -429,4 +493,11 @@ pre {
     to {
         opacity: 1;
     }
+}
+
+:target::before {
+    content: '';
+    display: block;
+    height: 40px;
+    margin-top: -40px;
 }
