--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -20,7 +20,7 @@
                         <div class="d-flex w-100 justify-content-between">
                             <h5 class="mb-1">
                                 {% if event.upcoming %}
-                                    <span class="badge badge-info">Upcoming</span>
+                                    <span class="badge badge-secondary">Upcoming</span>
                                 {% else %}
                                     {% if event.team.yes %}
                                         <span class="badge badge-success">Team</span>
