--- a/_layouts/events.html
+++ b/_layouts/events.html
@@ -7,11 +7,13 @@
         {% include nav.html %}
 
         <div class="reactive-bg">
-            <div class="post container">
-                <h1>Events</h1>
-                <p>Here is a list of notable events I am attending / have attended</p>
-                <hr>
 
+            <div class="title container">
+                <h1>{{page.title}}</h1>
+                <h4>{{page.description}}</h4>
+            </div><br>
+
+            <div class="post container">
                 <div class="list-group" id="posts">
 
                     {% for event in site.data.events %}
