--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,13 +7,12 @@
         {% include nav.html %}
 
         <div class="reactive-bg">
-            <div class="post container">
+
+            <div class="title container">
                 <h1>{{page.title}}</h1>
+            </div><br>
 
-                <hr>
-
-                <br>
-
+            <div class="post container">
                 {{content}}
             </div>
         </div>
