--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,27 +6,17 @@
     <div class="site-ctr">
         <!-- Navbar -->
         {% include nav.html %}
-        <!-- <div style="height:5vh"></div> -->
-
-        <!-- Header -->
-        <!-- <div class="header">
-            <div class="container">
-                <div class="content">
-                </div>
-            </div>
-            <div class="header-gap"></div>
-        </div> -->
 
         <div class="reactive-bg">
+
+            <div class="title container">
+                <h1>{{page.title}}</h1>
+                <h4>{{page.description}}</h4>
+            </div><br>
+
+
             <div class="post container">
-                <h1>{{page.title}}
-
-                </h1>
-                <h4>{{page.description}}
-
-                </h4>
-                <hr>
-                <p>
+                <p class="post-date">
                     <em>
                         <!-- Date -->
                         {{page.date}}
@@ -38,13 +28,11 @@
 
                         <!-- Permalink -->
                         {% if page.redirect_from %}
-                        <a href="{{site.baseurl}}{{page.redirect_from[0]}}"><i class="fas fa-link"></i></a>
+                        <!-- <a href="{{site.baseurl}}{{page.redirect_from[0]}}"><i class="fas fa-link"></i></a> -->
                         {% endif %}
                     </em>
 
                 </p>
-
-                <br>
 
                 {{content}}
             </div>
