--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -17,10 +17,11 @@
         </div> -->
 
         <div class="reactive-bg">
-            <div class="post container">
-                <h1>Posts</h1>
-                <hr>
+            <div class="title container">
+                <h1>{{page.title}}</h1>
+            </div><br>
 
+            <div class="post container">
                 <div class="list-group" id="posts">
                     <a href="#posts"
                         class="feature list-group-item list-group-item-action list-group-item-dark ">Featured
