--- a/_layouts/portfolio.html
+++ b/_layouts/portfolio.html
@@ -13,32 +13,22 @@
             </div>
 
             <br>
-            
+
             <div class="post container">
+                <h1>Software</h1>
+                <hr>
+            </div><br>
 
-                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel" data-interval="">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="https://scontent-yyz1-1.cdninstagram.com/v/t51.2885-15/e35/92883275_1027088314352400_5268990124422184925_n.jpg?_nc_ht=scontent-yyz1-1.cdninstagram.com&_nc_cat=100&_nc_ohc=VG8O-JDDnFIAX8F34ZK&oh=a18700b43d9c251b62bc4d034dec772b&oe=5EC66F96" class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="..." class="d-block w-100" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="..." class="d-block w-100" alt="...">
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
+            <div class="post container">
+                <h1>Web</h1>
+                <hr>
+            </div><br>
 
-            </div>
+            <div class="post container">
+                <h1>Photography</h1>
+                <hr>
+            </div><br>
+            
         </div>
 
     </div>
