--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@
 
         </div>
         <div class="landing-more container">
-            <h5><a href="/blog">Blog</a> <a href="/projects">Projects</a> <a href="#whoami">More</a></h5>
+            <h5><a href="/blog">Blog</a> <a href="/projects">Projects</a> <a href="/events">Events</a> <a href="#whoami">More</a></h5>
         </div>
 
 
