--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,22 @@
     window.onload = startPY;
 </script>
 
+<!-- Fathom - simple website analytics - https://github.com/usefathom/fathom -->
+<script>
+    (function (f, a, t, h, o, m) {
+        a[h] = a[h] || function () {
+            (a[h].q = a[h].q || []).push(arguments)
+        };
+        o = f.createElement('script'),
+            m = f.getElementsByTagName('script')[0];
+        o.async = 1; o.src = t; o.id = 'fathom-script';
+        m.parentNode.insertBefore(o, m)
+    })(document, window, '//a.rtlroute.cc/tracker.js', 'fathom');
+    fathom('set', 'siteId', 'WOCXR');
+    fathom('trackPageview');
+</script>
+<!-- / Fathom -->
+
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
