--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,8 @@
         <div class="landing container">
 
             <div style="height:15vh;"></div>
-            <img id="face-backdrop" src="/assets/images/face-backdrop.png">
+            <!-- <img id="face-backdrop" src="/assets/images/face-backdrop.png"> -->
+            <img id="face-backdrop" src="/assets/images/human-profile-2-small-backdrop.png">
 
             <div style="height:20vh;"></div>
             <div class="nudge-right">
