--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,15 +8,7 @@
 
         <div class="landing container">
 
-            <div style="height:15vh;"></div>
-            <!-- <img id="face-backdrop" src="/assets/images/face-backdrop.png"> -->
-            <img id="face-backdrop" src="/assets/images/human-profile-2-small-backdrop.png">
-
-            <div style="height:20vh;"></div>
-            <div class="nudge-right">
-                <h1 id="name-landing">{{site.title}}</h1>
-                <h3 id="me-landing">Programmer</h3>
-            </div>
+           <h1>I am Evan Pratten</h1>
 
         </div>
         <div class="landing-more container">
