--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,8 @@
-<nav class="navbar navbar-dark sticky-top bg-dark navbar-expand-lg">
+<nav class="navbar navbar-dark sticky-top bg-dark navbar-expand-lg custom-navbar" id="navbar">
     <!-- Navbar content -->
     <div class="container">
-        <a class="navbar-brand" href="{{site.baseurl}}/"><span>{{site.title}}</span></a>
+        <a class="navbar-brand" href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/images/Signature.png"></a>
+            <!-- <span>{{site.title}}</span></a> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -11,12 +12,8 @@
                 <a class="nav-item nav-link" href="{{site.baseurl}}/blog">Blog</a>
                 <a class="nav-item nav-link" href="{{site.baseurl}}/projects">Projects</a>
                 <a class="nav-item nav-link" href="{{site.baseurl}}/events">Events</a>
-                <!-- <a class="nav-item nav-link" href="{{site.baseurl}}/music">Music</a> -->
-                <!-- <a class="nav-item nav-link" href="{{site.baseurl}}/documentation">Documentation</a> -->
                 <a class="nav-item nav-link" href="{{site.baseurl}}/about">About</a>
             </div>
         </div>
     </div>
 </nav>
-
-<br>
