--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,9 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'IBM Plex Mono', monospace;
-    font-family: 'IBM Plex Sans', sans-serif;
-    background-color: #343a40;
+    /* font-family: 'IBM Plex Mono', monospace;
+    font-family: 'IBM Plex Sans', sans-serif; */
+    background-color: var(--color-purple);
 }
 
 html {
@@ -264,7 +264,7 @@ h1 {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'IBM Plex Mono', monospace;
+    /* font-family: 'IBM Plex Mono', monospace; */
 }
 
 a h5 {
@@ -273,7 +273,7 @@ a h5 {
 
 .post.container {
     padding: 20px;
-    font-family: 'IBM Plex Sans', sans-serif;
+    /* font-family: 'IBM Plex Sans', sans-serif; */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 5px;
     /* transform: translateY(-30px); */
@@ -285,7 +285,7 @@ a h5 {
     padding-top: 15px;
     padding-bottom: 15px;
     padding-left: 20px;
-    font-family: 'IBM Plex Sans', sans-serif;
+    /* font-family: 'IBM Plex Sans', sans-serif; */
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 5px;
     /* transform: translateY(-30px); */
