--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
         rel="stylesheet">
 
     <!-- Adsense -->
-    <script data-ad-client="ca-pub-6940033544404615" async
-        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <!-- <script data-ad-client="ca-pub-6940033544404615" async
+        src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
 
 </head>
