--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -2,7 +2,7 @@
 ---
 
 .custom-navbar {
-    {% if header_red %}
+    {% if page.header_red %}
     background-color: var(--color-red)!important;
     {% else %}
     background-color: var(--color-purple)!important;
