--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -15,3 +15,14 @@
     margin-top: 6rem;
 
 }
+
+.content-container p,h1,h2,h3,h4,h5,h6,img,table{
+    @extend container
+}
+
+.highlight{
+    background-color: var(--light-gray);
+    border-radius:5px;
+    padding: 3px;
+    margin-bottom:0;
+}
