--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,6 +53,5 @@
 
 {% if page.requires_graphs %}
 <!-- Roughviz -->
-<script src="https://unpkg.com/rough-viz@1.0.5"></script
+<script src="https://unpkg.com/rough-viz@1.0.5"></script>
 {% endif %}
->
