--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,102 +6,19 @@
         <!-- Navbar -->
         {% include nav.html %}
 
-        <div class="landing container">
-
-           <h1>I am Evan Pratten</h1>
-
-        </div>
-        <div class="landing-more container">
-            <h5><a href="/blog">Blog</a> <a href="/projects">Projects</a> <a href="/events">Events</a> <a href="#whoami">More</a></h5>
-        </div>
-
-
-        <div class="reactive-bg">
-            <div class="home container">
-
-
-                <!-- <div class="profile">
-                    <img src="{{site.baseurl}}/assets/images/human-profile.jpg">
-                </div> -->
-
-
-                <div class="info">
-                    <div id="mobile-title">
-                        <div style="height:25vh;"></div>
-                        <h1 class="blocky">{{site.title}}</h1>
-                        <h3 id="me-landing" style="text-align:center">Programmer</h3>
-                    </div>
-
-                    <!-- <hr> -->
-                    <div>
-                        <!-- class="tagline"> -->
-                        <br><br><br><br><br>
-                        <!-- <div style="height:20vh;"></div> -->
-
-                        <div id="whoami">
-                            <h2 class="blocky">WHOAMI</h2>
-                            <p>{{site.about}}</p>
-                        </div>
-
-                        <br><br><br><br><br>
-                        <!-- <div style="height:20vh;"></div> -->
-
-                        <div id="languages">
-                            <h2 class="blocky">Programming</h2>
-
-                            <p>I have been programming since 2013, and started learning with Python3.
-                                Since then, I have picked up many other languages, and am currently mainly using Python,
-                                Java, and C.
-                                I am also working on learning a few new languages, including Ruby at the moment.</p>
-                        </div>
-
-
-                        <br><br><br><br><br>
-                        <!-- <div style="height:20vh;"></div> -->
-
-                        <div id="whoami">
-                            <h2 class="blocky">Projects</h2>
-                            <p>In my <a href="/projects">Projects page</a>, I have a list of projects I have worked on,
-                                ranging from unfinished
-                                ideas, to codebases that took months to develop. Feel free to check them out, and let me
-                                know what you think!</p>
-                        </div>
-
-                        <!-- <h2>Languages</h2>
-
-                        <div class="progress" style="height:30px">
-                            <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="15"
-                                aria-valuemin="0" aria-valuemax="100">Python</div>
-                            <div class="progress-bar bg-success" role="progressbar" style="width: 30%"
-                                aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">Java</div>
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 10%" aria-valuenow="20"
-                                aria-valuemin="0" aria-valuemax="100">C</div>
-                            <div class="progress-bar bg-secondary" role="progressbar" style="width: 20%"
-                                aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">Other</div>
-                        </div>
-
-                        <br>
-                        <p>I have been programming since 2013, and started learning with Python3.<br>
-                            Since then, I have picked up many other languages, and am currently mainly using Python,
-                            Java, and C.<br>
-                            I am working on learning a few new languages, including Ruby at the moment.</p> -->
-
-
-                        <!-- <br><br>
-                        <h2>Projects</h2>
-
-                        <p>
-                            To learn more about the projects I work on, check out my Projects page
-                        </p>
-
-                        <a href="{{site.baseurl}}/projects">
-                            <button type="button" class="btn btn-success">View Page</button>
-                        </a> -->
-                    </div>
-
-                </div>
+        <div class="color-hero">
+            <div class="hello container">
+                <h1>Hi,</h1>
+                <h1>I am Evan&nbsp;Pratten</h1>
             </div>
         </div>
+
+        <div class="home-secondary-panel edge--top">
+            <div class="inner-content-container home-content container">
+                {{content}}
+            </div>
+        </div>
+
 
 
     </div>
