--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/page.css">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/home.css">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/edges.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/photos.css">
 
     <!-- Icons and Brands -->
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i|IBM+Plex+Sans:100,100i,400,400i,700,700i"
