Add a tracking tag

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,6 +12,9 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
+<!-- Tracking API -->
+<script src="https://api.retrylife.ca/tracking/external/retrylife.ca"></script>
+
 <!-- Offsets for links -->
 <script>
     (function ($, window) {
