--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,9 @@
 
 <br><br>
 
+<div class="foot-info center">
+    Made by Evan Pratten | <a href="/feed.xml">RSS</a> | <a href="https://status.retrylife.ca">API Status</a>
+</div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
