--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <head>
     <title>{{page.title}} | {{ site.title }}</title>
     <meta charset="utf-8" />
@@ -9,7 +10,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-        
+    <!-- Katex -->
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/KaTeX/0.1.0/katex.min.css">
 
     <!-- Site style -->
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/color-theme.css">
