--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
 
 <!-- Load KaTeX -->
 <script src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.js" crossorigin="anonymous"></script>
-<script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0-rc.1/dist/contrib/auto-render.min.js" crossorigin="anonymous"
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/contrib/auto-render.min.js" crossorigin="anonymous"
         onload="renderMathInElement(document.body);"></script>
 
 <!-- Parse the Latex divs with Katex-->
