--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,15 @@
 
         <div class="reactive-bg">
 
-            <div class="color-space" id="color-space"></div>
+            <div class="color-space" id="color-space">
+                <div class="container" style="height:100%; text-align:right">
+                    {% if page.backing_img %}
+                    <img src="{{page.backing_img}}" style="{{page.backing_scalar}};padding-right:5%"></img>
+                    {% else %}
+                    <img src="/assets/images/innovation__monochromatic.svg" style="height:90%;padding-right:5%"></img>
+                    {% endif %}
+                </div>
+            </div>
 
             <div class="content-container">
 
