--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -1,50 +1,64 @@
----
----
 
-body{
-    padding:0;
-    margin:0;
+body {
+    padding: 0;
+    margin: 0;
 }
 
 html {
     scroll-behavior: smooth;
 }
 
-.color-space{
-    height:25vh;
-
-    {% if page.header_red %}
-    background-color: var(--color-red)!important;
-    {% else %}
+.color-space {
+    height: 25vh;
     background-color: var(--color-purple)!important;
-    {% endif %}
 }
 
-.title-container{
+.title-container {
     margin-top: 6rem;
-
 }
 
-
-.highlight{
+.highlight {
     background-color: var(--light-gray);
-    border-radius:5px;
+    border-radius: 5px;
     padding: 3px;
-    margin-bottom:0;
+    margin-bottom: 0;
 }
 
-img{
-    max-width:99%;
+img {
+    max-width: 99%;
 }
 
-iframe{
-    max-width:99%;
+iframe {
+    max-width: 99%;
 }
 
-.center{
+.center {
     text-align: center;
 }
 
 .foot-info a {
     color: var(--color-dark-purple);
 }
+
+/* .inner-content-container>p>a {
+    position: relative;
+    display: inline-block;
+    padding-bottom: 0px;
+    color: #212529;
+}
+
+.inner-content-container>p>a:hover {
+    outline: none;
+    color: var(--color-blue);
+    text-decoration: none;
+}
+
+.inner-content-container>p>a::after {
+    position: absolute;
+    top: 92%;
+    left: 0;
+    width: 100%;
+    height: 3px;
+    background: var(--color-blue);
+    content: '';
+} */
