Push a link to the demo repo

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -40,6 +40,10 @@ iframe {
     color: var(--color-dark-purple);
 }
 
+.inner-content-container>p{
+    text-align: justify;
+}
+
 /* .inner-content-container>p>a {
     position: relative;
     display: inline-block;
