--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,6 +36,9 @@
         });
 </script>
 
+<!-- TikZJax loader -->
+<script src="https://tikzjax.com/v1/tikzjax.js"></script>
+
 <!-- Tracking API -->
 <script src="https://api.retrylife.ca/tracking/external/retrylife.ca"></script>
 
