--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,6 +13,9 @@
     <!-- Katex -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css">
 
+    <!-- TikZJax -->
+    <link rel="stylesheet" type="text/css" href="https://tikzjax.com/v1/fonts.css">
+
     <!-- Site style -->
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/color-theme.css">
     <!-- <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css"> -->
