--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -1,4 +1,3 @@
-
 body {
     padding: 0;
     margin: 0;
@@ -40,8 +39,17 @@ iframe {
     color: var(--color-dark-purple);
 }
 
-.inner-content-container>p{
+.inner-content-container>p {
     text-align: justify;
+}
+
+.retention {
+    border-style: solid;
+    border-width: 2px;
+    border-color: var(--color-purple)!important;
+    border-radius: 15px;
+    padding: 15px;
+    padding-bottom: 0;
 }
 
 /* .inner-content-container>p>a {
