--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,10 @@
 
     {%seo%}
 
+    <!-- Discovery -->
+    <link rel="alternate" title="{{site.title}}" type="application/rss+xml" href="{{site.url}}/feed.xml" />
+    <link rel="alternate" title="{{site.title}}" type="application/json" href="{{site.url}}/feed.json" />
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
