--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -47,6 +47,10 @@ iframe {
     
 }
 
+.hidden{
+    display:none !important;
+}
+
 /* .inner-content-container>p>a {
     position: relative;
     display: inline-block;
