--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -24,14 +24,14 @@
 
 
                 <div class="title-container container">
-                    <h1>{{page.title}}</h1>
-                    <h4>{{page.description}}</h4>
+                    <h1 id="page-title">{{page.title}}</h1>
+                    <h4 id="page-subtitle">{{page.description}}</h4>
 
                     {% assign page_date = page.date | split: " " %}
                     <h6>
                         <small style="color:gray;">{{page_date.first}}</small>
                         {% for category in page.categories %}
-                        <span class="badge badge-secondary">{{category}}</span>
+                        <a href="/categories?c={{category}}"><span class="badge" style="background-color: var(--light-gray);color:#333;">{{category}}</span></a>
                         {% endfor %}
                     </h6>
 
