--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
     <title>{{page.title}} | {{ site.title }}</title>
     <meta charset="utf-8" />
@@ -14,11 +15,15 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    {% if page.uses contains "katex" %}
     <!-- Katex -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css">
+    {% endif %}
 
+    {% if page.uses contains "tikz" %}
     <!-- TikZJax -->
     <link rel="stylesheet" type="text/css" href="https://tikzjax.com/v1/fonts.css">
+    {% endif %}
 
     <!-- Site style -->
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/color-theme.css">
