--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,7 +33,7 @@
     <!-- Site style -->
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/color-theme.css">
     <!-- <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css"> -->
-    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/fonts.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/fonts.css" rel="preload">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/github-syntax.css">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/fontawesome.css">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/navigation.css">
