--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark sticky-top bg-dark navbar-expand-lg custom-navbar" id="navbar">
     <!-- Navbar content -->
     <div class="container">
-        <a class="navbar-brand" href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/images/Signature.png"></a>
+        <a class="navbar-brand" href="{{site.baseurl}}/"><img src="{{site.baseurl}}/assets/images/Signature.png" alt="Evan Pratten"></a>
             <!-- <span>{{site.title}}</span></a> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
