--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 <head>
     <title>{{page.title}} | {{ site.title }}</title>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 
     <!-- Favicons -->
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -27,6 +27,11 @@
     {% if page.uses contains "tikz" %}
     <!-- TikZJax -->
     <link rel="stylesheet" type="text/css" href="https://tikzjax.com/v1/fonts.css">
+    {% endif %}
+
+    {% if page.uses contains "pdf" %}
+    <!-- Inline PDF files -->
+    <link rel="stylesheet" href="https://unpkg.com/browse/pdfjs-dist@2.4.456/web/pdf_viewer.css">
     {% endif %}
 
     <!-- Site style -->
