--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -62,7 +62,7 @@
 {% endif %}
 
 <!-- Tracking API -->
-<script src="https://api.retrylife.ca/tracking/external/retrylife.ca"></script>
+<script src="https://api.retrylife.ca/tracking/external/retrylife.ca" async="true"></script>
 
 <!-- Offsets for links -->
 <script>
