--- a/_includes/head.html
+++ b/_includes/head.html
@@ -35,6 +35,11 @@
     <link rel="stylesheet" href="https://unpkg.com/browse/pdfjs-dist@2.4.456/web/pdf_viewer.css">
     {% endif %}
 
+    <!-- Primary fonts -->
+    <link rel="preload" href="{{site.baseurl}}/assets/fonts/GT-Walsheim-Bold.woff" as="font">
+    <link rel="preload" href="{{site.baseurl}}/assets/fonts/GT-Walsheim-Regular.woff" as="font">
+    <link rel="preload" href="{{site.baseurl}}/assets/fonts/TiemposTextWeb-Regular.woff2" as="font">
+
     <!-- Site style -->
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/color-theme.css">
     <!-- <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css"> -->
