--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,7 +45,7 @@
     <!-- <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css"> -->
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/fonts.css" rel="preload">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/github-syntax.css">
-    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/fontawesome.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/fontawesome.min.css">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/navigation.css">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/page.css">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/home.css">
