Set font origins

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -36,9 +36,9 @@
     {% endif %}
 
     <!-- Primary fonts -->
-    <link rel="preload" href="{{site.baseurl}}/assets/fonts/GT-Walsheim-Bold.woff" as="font">
-    <link rel="preload" href="{{site.baseurl}}/assets/fonts/GT-Walsheim-Regular.woff" as="font">
-    <link rel="preload" href="{{site.baseurl}}/assets/fonts/TiemposTextWeb-Regular.woff2" as="font">
+    <link rel="preload" href="{{site.baseurl}}/assets/fonts/GT-Walsheim-Bold.woff" as="font" crossorigin="anonymous">
+    <link rel="preload" href="{{site.baseurl}}/assets/fonts/GT-Walsheim-Regular.woff" as="font" crossorigin="anonymous">
+    <link rel="preload" href="{{site.baseurl}}/assets/fonts/TiemposTextWeb-Regular.woff2" as="font" crossorigin="anonymous">
 
     <!-- Site style -->
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/color-theme.css">
