Reorg site styles

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  lang="en">
+<html lang="en">
 
 <head>
     <title>{{page.title}} | {{ site.title }}</title>
@@ -38,21 +38,23 @@
     <!-- Primary fonts -->
     <link rel="preload" href="{{site.baseurl}}/assets/fonts/GT-Walsheim-Bold.woff" as="font" crossorigin="anonymous">
     <link rel="preload" href="{{site.baseurl}}/assets/fonts/GT-Walsheim-Regular.woff" as="font" crossorigin="anonymous">
-    <link rel="preload" href="{{site.baseurl}}/assets/fonts/TiemposTextWeb-Regular.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="{{site.baseurl}}/assets/fonts/TiemposTextWeb-Regular.woff2" as="font"
+        crossorigin="anonymous">
 
     <!-- Site style -->
-    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/color-theme.css">
-    <!-- <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css"> -->
+    <link rel="stylesheet" href="/assets/css/site.css">
+
+
+    <!-- <link rel="stylesheet" href="{{site.baseurl}}/assets/css/color-theme.scss">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/fonts.css" rel="preload">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/github-syntax.css">
-    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/fontawesome.min.css">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/navigation.css">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/page.css">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/home.css">
-    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/edges.css">
-    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/photos.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/edges.css"> -->
 
     <!-- Icons and Brands -->
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/external/fontawesome/css/fontawesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i|IBM+Plex+Sans:100,100i,400,400i,700,700i"
         rel="stylesheet">
 
