--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,7 +44,6 @@
     <!-- Site style -->
     <link rel="stylesheet" href="/assets/css/site.css">
 
-
     <!-- <link rel="stylesheet" href="{{site.baseurl}}/assets/css/color-theme.scss">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/fonts.css" rel="preload">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/github-syntax.css">
@@ -53,10 +52,22 @@
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/home.css">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/edges.css"> -->
 
-    <!-- Icons and Brands -->
-    <link rel="stylesheet" href="{{site.baseurl}}/assets/external/fontawesome/css/fontawesome.min.css">
+    <!-- Google fonts -->
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i|IBM+Plex+Sans:100,100i,400,400i,700,700i"
         rel="stylesheet">
+
+    <!-- Load fontawesome -->
+    <link rel="prefetch" as="style" href="/assets/external/fontawesome/css/fontawesome.min.css" crossorigin="anonymous">
+    <script>
+        var fa = document.createElement("link");
+        fa.type = "text/css";
+        fa.rel = "stylesheet";
+        fa.href = "/assets/external/fontawesome/css/fontawesome.min.css";
+        document.head.appendChild(fa);
+    </script>
+    <noscript>
+        <link rel="stylesheet" href="/assets/external/fontawesome/css/fontawesome.min.css">
+    </noscript>
 
     <!-- Adsense -->
     <!-- <script data-ad-client="ca-pub-6940033544404615" async
