--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,8 +41,7 @@
     <link rel="preload" href="{{site.baseurl}}/assets/fonts/TiemposTextWeb-Regular.woff2" as="font"
         crossorigin="anonymous">
 
-    <!-- Site style -->
-    <link rel="stylesheet" href="/assets/css/site.css">
+    
 
     <!-- <link rel="stylesheet" href="{{site.baseurl}}/assets/css/color-theme.scss">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/fonts.css" rel="preload">
@@ -57,6 +56,8 @@
         rel="stylesheet">
 
     <!-- Load fontawesome -->
+    <link rel="preload" href="/assets/external/fontawesome/webfonts/fa-solid-900.woff2" as="font" crossorigin="anonymous">
+    <link rel="preload" href="/assets/external/fontawesome/webfonts/fa-brands-400.woff2" as="font" crossorigin="anonymous">
     <link rel="prefetch" as="style" href="/assets/external/fontawesome/css/fontawesome.min.css" crossorigin="anonymous">
     <script>
         var fa = document.createElement("link");
@@ -68,6 +69,9 @@
     <noscript>
         <link rel="stylesheet" href="/assets/external/fontawesome/css/fontawesome.min.css">
     </noscript>
+
+    <!-- Site style -->
+    <link rel="stylesheet" href="/assets/css/site.css">
 
     <!-- Adsense -->
     <!-- <script data-ad-client="ca-pub-6940033544404615" async
