Add a webcam post

--- a/_sass/site/page.scss
+++ b/_sass/site/page.scss
@@ -9,7 +9,7 @@ html {
 
 .color-space {
     height: 25vh;
-    background-color: var(--color-purple)!important;
+    background-color: var(--color-purple) !important;
 }
 
 .title-container {
@@ -43,33 +43,24 @@ iframe {
     text-align: justify;
 }
 
-.retention {
-    
+.retention {}
+
+.hidden {
+    display: none !important;
 }
 
-.hidden{
-    display:none !important;
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    border: 1px solid rgba(0, 0, 0, .125);
 }
 
-/* .inner-content-container>p>a {
-    position: relative;
-    display: inline-block;
-    padding-bottom: 0px;
-    color: #212529;
+th {
+    border: 1px solid rgba(0, 0, 0, .125);
+    padding: 5px;
 }
 
-.inner-content-container>p>a:hover {
-    outline: none;
-    color: var(--color-blue);
-    text-decoration: none;
+td {
+    border: 1px solid rgba(0, 0, 0, .125);
+    padding: 5px;
 }
-
-.inner-content-container>p>a::after {
-    position: absolute;
-    top: 92%;
-    left: 0;
-    width: 100%;
-    height: 3px;
-    background: var(--color-blue);
-    content: '';
-} */
